# arqma

./: .gitmodules  ANALYSIS_MALBIT_STYLE.md  CMakeLists.txt  COMPATIBILITY_ANALYSIS.md  Makefile  README.md  android-docker  android-docker.save  android-docker.save.1  build-all-arch.sh
.github/workflows/: codeql.yml  depends.yml
android-libs/: collect.sh
cmake/: FindPCSC.cmake  GenVersion.cmake  Version.cmake
contrib/depends/: Makefile  toolchain.cmake.in
contrib/epee/include/: console_handler.h  span.h  string_tools.h  syncobj.h  wipeable_string.h
contrib/epee/include/net/: abstract_tcp_server2.h  abstract_tcp_server2.inl  http_protocol_handler.h  http_protocol_handler.inl  http_server_handlers_map2.h  levin_client.inl  levin_helper.h  levin_protocol_handler.h  levin_protocol_handler_async.h  net_utils_base.h
contrib/epee/include/storages/: parserse_base_utils.h  portable_storage.h
contrib/epee/src/: CMakeLists.txt  connection_basic.cpp  misc_language.cpp  mlocker.cpp  net_ssl.cpp  tiny_ini.cpp  wipeable_string.cpp
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in  version.h
src/arqma_mq/: CMakeLists.txt
src/arqnet/: CMakeLists.txt  sn_network.cpp  sn_network.h
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  testdb.h
src/blockchain_db/berkeleydb/: db_bdb.cpp  db_bdb.h
src/blockchain_db/lmdb/: db_lmdb.cpp  db_lmdb.h
src/blockchain_utilities/: CMakeLists.txt  blockchain_blackball.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_usage.cpp
src/blocks/: CMakeLists.txt
src/checkpoints/: CMakeLists.txt  checkpoints.cpp
src/common/: CMakeLists.txt  dns_utils.cpp  download.cpp  i18n.cpp  password.cpp  password.h  stack_trace.cpp  threadpool.cpp  updates.cpp  util.cpp  util.h
src/crypto/: CMakeLists.txt  chacha.h  cn_old_hash.c  cn_old_hash.hpp  cn_old_hash_hard_arm.cpp  cn_old_hash_hard_intel.cpp  cn_old_hash_soft.cpp  cn_turtle_hash.c  crypto.cpp  crypto.h  groestl.c  groestl_tables.h  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  keccak.c  oaes_lib.c  slow-hash.c  tree-hash.c  variant2_int_sqrt.h
src/crypto/cn_lite/: cn_lite_hash.hpp  cn_lite_hash_hard_intel.cpp  cn_lite_hash_soft.cpp
src/cryptonote_basic/: CMakeLists.txt  account.cpp  account.h  connection_context.cpp  connection_context.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  difficulty.cpp  difficulty.h  hardfork.h  miner.cpp
src/cryptonote_core/: CMakeLists.txt  blockchain.cpp  blockchain.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  i_core_events.h  service_node_list.cpp  tx_pool.cpp  tx_pool.h
src/cryptonote_protocol/: CMakeLists.txt  arqnet.cpp  block_queue.cpp  block_queue.h  cryptonote_protocol_defs.h  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h  enums.h  fwd.h  levin_notify.h
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_server.cpp  daemon.cpp  executor.cpp  main.cpp  rpc_command_executor.cpp
src/daemonizer/: CMakeLists.txt  windows_daemonizer.inl  windows_service.cpp
src/debug_utilities/: CMakeLists.txt  cn_deserialize.cpp
src/device/: CMakeLists.txt  device.hpp  device_default.cpp  device_io_hid.cpp  device_io_hid.hpp  device_ledger.cpp  device_ledger.hpp  log.cpp
src/gen_multisig/: CMakeLists.txt  gen_multisig.cpp
src/gen_ssl_cert/: CMakeLists.txt
src/lmdb/: CMakeLists.txt
src/lmdb/liblmdb/: CMakeLists.txt
src/mnemonics/: CMakeLists.txt  electrum-words.cpp  electrum-words.h  language_base.h
src/multisig/: CMakeLists.txt  multisig.cpp
src/net/: CMakeLists.txt
src/p2p/: CMakeLists.txt  net_node.cpp  net_node.h  net_node.inl  net_node_common.h  p2p_protocol_defs.h
src/ringct/: CMakeLists.txt  bp_legacy.cc  rctOps.cpp  rctSigs.cpp  rctTypes.h
src/rpc/: CMakeLists.txt  core_rpc_server.cpp  core_rpc_server.h  core_rpc_server_commands_defs.h  daemon_handler.cpp  daemon_handler.h  daemon_messages.cpp  daemon_messages.h  message_data_structs.h  rpc_handler.h  zmq_server.cpp
src/serialization/: CMakeLists.txt  json_object.cpp
src/simplewallet/: CMakeLists.txt  simplewallet.cpp  simplewallet.h
src/wallet/: CMakeLists.txt  node_rpc_proxy.cpp  node_rpc_proxy.h  wallet2.cpp  wallet2.h  wallet_args.cpp  wallet_errors.h  wallet_rpc_server.cpp  wallet_rpc_server.h  wallet_rpc_server_commands_defs.h
src/wallet/api/: CMakeLists.txt  wallet.cpp  wallet.h  wallet2_api.h  wallet_manager.cpp  wallet_manager.h
translations/: CMakeLists.txt
utils/build_scripts/: android32.Dockerfile
